libs/@local/hashql/ast/tests/ui/lower/type-extractor/definition/global-generic-constraint-not-enough.jsonc
//@ run: fail
//@ description: Tests that an error is properly reported when a generic type is used without providing required type parameters
[
  "type",
  "Foo",
  "Some",
  //~^ ERROR Missing parameter `T`
  "_"
]
